--- a/index.html
+++ b/index.html
@@ -219,12 +219,12 @@
 <body>
     <div id="mainWrapper">
         <div id="pageHeader">
-            <div id="logo"><img src="images/logo.png" alt="Company Logo" /></div>
-            <div id="company-name"><h1>Selemani Car Rental Co</h1></div>
+            <div id="logo"><img src="Images/ferrari.webp" alt="Company Logo" /></div>
+            <div id="company-name"><h1>Candiotes Car Rental Co</h1></div>
     </div>
     <div id="content">
         <div class="welcome">
-        <p class="special">Dear customer welcome to Selemani Car Rental Co. To rent a car from us, simply fill in the form below.
+        <p class="special">Dear customer welcome to Candiotes Car Rental Co. To rent a car from us, simply fill in the form below.
         Please note that all fields marked with an asterisk (*) are <span class="mandatory">mandatory</span> fields!</p>
     </div>
     <form name="carRental" id="carRental" method="post" action="" onSubmit="return validateForm(this);">
@@ -482,7 +482,7 @@
         </form>
     <div class="clear"></div>
     <div id="footer">
-        <p>Copyright &copy; 2025: <span>Selemani Car Rental Co.</span> - All Rights Reserved!</p>
+        <p>Copyright &copy; 2025: <span>candiotes Car Rental Co.</span> - All Rights Reserved!</p>
     </div>
 </body>
 </html>
